# openstates-scrapers

./: .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  AUTHORS  AUTHORS.md  CITATION.cff  CODE_OF_CONDUCT.md  Dockerfile  Dockerfile-alpine  Dockerfile-pupa  Dockerfile.california  LICENSE  README.md  README.rst  az_legislators.csv  billy_settings.py  contributing.rst  dbinit.sh  docker-compose.yml  docker_entrypoint.sh  extractlog.sh  fabfile.py  flake8.sh  index.rst  jurisdiction_configs.json  me_senate.xls  openssl.cnf  oyster_settings.py  pupa-scrape.sh  pupa_settings.py  pyproject.toml  quickstart.py  requirements-new.txt  requirements-site.txt  requirements.ca.txt  requirements.txt  ri_senate.xls  runscrape.sh  (+4 more)
.devcontainer/: devcontainer.json  install.sh
.github/: CODEOWNERS  CONTRIBUTING.md  FUNDING.yml  ISSUE_TEMPLATE
.run/: spatula.cli.run.xml
ak/: __init__.py
al/: __init__.py  bills.py  legislators.py
ar/: bills.py  committees.py
az/: action_utils.py  committees.py  utils.py
backend/: README.rst  couchdb-python-fixes.diff  couchimport.py  download_versions.py  export.py  get_bio.py  schemas.py
billy/: __init__.py  requirements.txt  settings.py  utils.py
billy_metadata/: ak.py  al.py  ar.py  az.py  ca.py  co.py  ct.py  dc.py  de.py  fl.py  ga.py  hi.py  ia.py  id.py  il.py  in.py  ks.py  ky.py  la.py  ma.py  md.py  me.py  mi.py  mn.py  mo.py  ms.py  mt.py  nc.py  nd.py  ne.py  nh.py  nj.py  nm.py  nv.py  ny.py  oh.py  ok.py  or.py  pa.py  pr.py  (+13 more)
ca/: bills.py  committees.py  events.py
co/: __init__.py  bills.py  legislators.py
ct/: legislators.py  utils.py
data/: README  README.rst  data-format.rst
dc/: committees.py  legislators.py
de/: __init__.py  actions.py  bills.py  committees.py  events.py
docs/: Makefile  api.bills.rst  api.changelog.rst  api.committees.rst  api.events.rst  api.legislators.rst  api.metadata.rst  api.rst  api.status.rst  conf.py  configuration.rst  contributing.rst  data_format.rst  index.rst  make.bat  metadata.rst  pythonapi.rst  scrape.rst  scrapers.rst  scripts.rst
fiftystates/: settings.py
fl/: __init__.py  base.py  bills.py  committees.py  legislators.py  people.py
ga/: bills.py  util.py
hi/: __init__.py  bills.py  utils.py
ia/: __init__.py  legislators.py  votes.py
id/: __init__.py  bills.py
il/: __init__.py  bills.py  committees.py  events.py  legislators.py
(+2226 files in other folders)
